# nodus

./: .gitignore  AGENTS.md  CONTRIBUTING.md  Cargo.toml  PROMPT.cn.md  PROMPT.md  PROPOSAL.md  README.cn.md  README.md  install.ps1  install.sh  nodus.toml
.github/workflows/: ci.yml  codeql.yml  release.yml
docs/: hooks.md
docs/plans/: 2026-05-16-codex-claude-native-integration.md
docs/specs/: 2026-05-09-adapter-profile-registry.md  2026-05-09-managed-output-provenance.md  2026-05-09-package-shape-adapters.md  2026-05-13-pre-0.15-followups.md  2026-05-15-claude-plugin-portable-hooks.md  2026-05-16-codex-claude-native-integration.md  2026-05-18-virtual-plugin-marketplaces.md
docs/superpowers/plans/: 2026-04-02-cli-help-and-doctor-implementation.md  2026-04-03-mcp-server.md  2026-04-03-notify-blake3-relay-watch.md
docs/superpowers/specs/: 2026-04-02-cli-help-and-doctor-design.md  2026-04-03-mcp-server-design.md
examples/: nodus.toml  package-author.nodus.toml
plugin/agents/: nodus-guide.md
plugin/commands/: add-package.md
plugin/rules/: nodus-usage.md
plugin/skills/nodus-consumer/: SKILL.md
src/: adapters.rs  agent_format.rs  clean.rs  cli.rs  domain.rs  git.rs  info.rs  install_paths.rs  lib.rs  list.rs  local_config.rs  lockfile.rs  main.rs  manifest.rs  mcp.rs  outdated.rs  relay.rs  report.rs  resolver.rs  review.rs  selection.rs  state.rs  store.rs  update.rs  update_checker.rs
src/adapters/: agents.rs  claude.rs  codex.rs  copilot.rs  cursor.rs  opencode.rs  output.rs  profile.rs  virtual_plugin.rs
src/cli/: args.rs  dispatch.rs  entry.rs  help.rs  output.rs  router.rs  tests.rs
src/cli/handlers/: dependency.rs  mcp.rs  mod.rs  project.rs  query.rs  system.rs
src/domain/: dependency_query.rs  dependency_status.rs
src/manifest/: discover.rs  init.rs  load.rs  model_impls.rs  tests.rs  types.rs
src/mcp/: handlers.rs  server.rs  status.rs  tools.rs
src/relay/: runtime.rs
src/relay/runtime/: mappings.rs  watch.rs
src/resolver/: runtime.rs
src/resolver/runtime/: doctor.rs  install_digest.rs  resolve.rs  support.rs  tests.rs
src/review/: runtime.rs
tests/: lockfile_v10_schema.rs  lockfile_v9_to_v10_migration.rs  manifest_root_sentinel.rs  mcp_serve.rs
