[package]
name = "nodus"
version = "0.3.3"
edition = "2024"
rust-version = "1.85"
description = "Local-first CLI for managing project-scoped agent packages."
license = "Apache-2.0"
documentation = "https://docs.rs/nodus"
readme = "README.md"
keywords = ["agents", "cli", "automation", "developer-tools", "local-first"]
categories = ["command-line-utilities", "development-tools"]
include = ["src/**", "Cargo.toml", "Cargo.lock", "README.md", "LICENSE"]

[dependencies]
anstream = "1.0.0"
anstyle = "1.0.14"
anyhow = "1.0.100"
clap = { version = "4.6.0", features = ["derive"] }
clap_complete = "4.5"
dialoguer = "0.12.0"
semver = { version = "1.0.27", features = ["serde"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
serde_yaml = "0.9.34"
sha2 = "0.10.9"
rayon = "1.11.0"
tempfile = "3.23.0"
thiserror = "2.0.17"
toml = "1.0.6"
walkdir = "2.5.0"
path-slash = "0.2.1"
dunce = "1.0.5"

[target.'cfg(any(target_os = "macos", target_os = "linux"))'.dependencies]
async-trait = "0.1.89"
mentra = "0.3.0"
tokio = { version = "1.50.0", features = ["macros", "rt-multi-thread"] }
